--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-            <a class="navbar-brand" href="#"> <img src="images/title-removebg-preview.png" alt="" width=90> </a>
+            <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width=90> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -86,13 +86,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="images/america.jpeg" alt="First slide" height=854.55p>
+            <img class="d-block w-100" src="images/captain-america0.jpg" alt="First slide" height=854.55p>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/strange2.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/thor (2).jpg" alt="Third slide">
+            <img class="d-block w-100" src="images/thor.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -125,7 +125,7 @@
 
 
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="images/captain-america.jpg" alt="Card image cap" width=100% height=43%>
+        <img class="card-img-top" src="images/captain-america1.jpg" alt="Card image cap" width=100% height=43%>
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -136,7 +136,7 @@
 
 
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="images/america.jpeg" alt="Card image cap" width=100% height=43%>
+        <img class="card-img-top" src="images/captain-america0.jpg" alt="Card image cap" width=100% height=43%>
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -158,7 +158,7 @@
 
 
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="images/thor (2).jpg" alt="Card image cap" width=100% height=43%>
+        <img class="card-img-top" src="images/thor.jpg" alt="Card image cap" width=100% height=43%>
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
